second page complete | countdown on page 2

--- a/index.html
+++ b/index.html
@@ -51,7 +51,40 @@
         </div>
 
         <div class="section s2">
-            hello
+            <div class="container">
+                <div class="timer_background">
+                    <div class="timer">
+                        <p class="timer-days"></p>
+                        <p class="timer-hours"></p>
+                        <p class="timer-mins"></p>
+                        <p class="timer-secs"></p>
+                    </div>
+                </div>
+
+                <div class="about_container">
+                    <a href="#section3">
+                        <div class="events_btn2">
+                            <i class="fas fa-caret-down"></i></i>
+                        </div>
+                    </a>
+
+                    <p class="rkmvcc_text">RKMVCC presents</p>
+                    <h1 class="about_heading">GREY MATTER 1.0</h1>
+                    <p class="organized_text">organized by Computer Science Dept.</p>
+                    <p class="email_text"><i class="far fa-envelope"></i>&nbsp;&nbsp;&nbsp;greymatterrkmvcc@gmail.com</p>
+
+                    <p class="about_text">The department of computer science is bringing the
+                        first ever multi-event tech fest to our college. The events have been
+                        curated in such a way that every individual of this college, irrespective
+                        of his department, can participate in the fest. The fest will really
+                        help students to identify their talents, strong spots and will provide
+                        them confidence whenever they go to an intercollege event. The series of
+                        events are listed below.
+                    </p>
+
+                    <div class="clip_background"></div>
+                </div>
+            </div>
         </div>
 
         <div class="section s3">
@@ -74,6 +107,7 @@
             showActiveTooltip: false,
         });
     </script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
