second page complete | countdown on page 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <h1 class="heading">Event, where everyone<br>can participate</h1>
                 <div class="seconadary">
-                    <p class="ad">Come join us</p>
+                    <p class="ad">Register today</p>
                     <div class="divider_small"></div>
                     <p class="time">Friday, March 20th, 2020</p>
                 </div>
