--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="section s1">
             <div class="hero">
                 <div class="navbar">
-                    <div class="logo">Grey Matter</div>
+                    <div class="logo"></div>
 
                     <ul class="navlinks">
                         <li class="link"><a href="#section2">About</a></li>
