--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GREY MATTER 1.0 | An event where everyone can participate.</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="manifest" href="./images/site.webmanifest">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&family=Oxanium:wght@800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&family=Oxanium:wght@800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -71,7 +75,8 @@
                     <p class="rkmvcc_text">RKMVCC presents</p>
                     <h1 class="about_heading">GREY MATTER 1.0</h1>
                     <p class="organized_text">organized by Computer Science Dept.</p>
-                    <p class="email_text"><i class="far fa-envelope"></i>&nbsp;&nbsp;&nbsp;greymatterrkmvcc@gmail.com</p>
+                    <p class="email_text"><i class="far fa-envelope"></i>&nbsp;&nbsp;&nbsp;greymatterrkmvcc@gmail.com
+                    </p>
 
                     <p class="about_text">The department of computer science is bringing the
                         first ever multi-event tech fest to our college. The events have been
