added preloading animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&family=Oxanium:wght@800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&family=Oxanium:wght@800&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -21,6 +23,14 @@
 <body>
     <div id="fullpage">
         <div class="section s1">
+            <div class="loader">
+                <div class="jumper">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+
             <div class="hero">
                 <div class="navbar">
                     <div class="logo"></div>
