page 3 complete | all links added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
+
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&family=Oxanium:wght@800&display=swap"
         rel="stylesheet">
@@ -46,7 +47,7 @@
                     </ul>
                 </div>
 
-                <h1 class="heading">Event, where everyone<br>can participate</h1>
+                <h1 class="heading">Event where everyone<br>can participate</h1>
                 <div class="seconadary">
                     <p class="ad">Register today</p>
                     <div class="divider_small"></div>
@@ -103,7 +104,76 @@
         </div>
 
         <div class="section s3">
-            <h1>No wraps, no extra markup</h1>
+            <div class="event_container">
+                <div class="event_cards">
+                    <div class="event_card card1">
+                        <p class="event_name">Brain-O-Pedia</p>
+                        <p class="event_subheading">Quiz</p>
+
+                        <button type="submit" class="registor_now_btn">
+                            <p class="btn_name">
+                                <a href="https://forms.gle/DrZFShZ3uxNZbY518" target="_blank">Register</a>
+                            </p>
+                        </button>
+                    </div>
+
+                    <div class="event_card card2">
+                        <p class="event_name">Tug of Words</p>
+                        <p class="event_subheading">Debate</p>
+
+                        <button type="submit" class="registor_now_btn">
+                            <p class="btn_name">
+                                <a href="https://forms.gle/2AnKmVioTw6w2C6V6" target="_blank">Register</a>
+                            </p>
+                        </button>
+                    </div>
+
+                    <div class="event_card card3">
+                        <p class="event_name">Encrypto</p>
+                        <p class="event_subheading">Reasoning & Riddles</p>
+
+                        <button type="submit" class="registor_now_btn">
+                            <p class="btn_name">
+                                <a href="https://forms.gle/xC6NxQBj8QihAgLd8" target="_blank">Register</a>
+                            </p>
+                        </button>
+                    </div>
+
+                    <div class="event_card card4">
+                        <p class="event_name">CodeAffair</p>
+                        <p class="event_subheading">Coding & Debugging</p>
+
+                        <button type="submit" class="registor_now_btn">
+                            <p class="btn_name">
+                                <a href="https://forms.gle/k3b7eqVMdavsKP7v7" target="_blank">Register</a>
+                            </p>
+                        </button>
+                    </div>
+
+                    <div class="event_card card5">
+                        <p class="event_name">UpFront</p>
+                        <p class="event_subheading">App UI Design</p>
+
+                        <button type="submit" class="registor_now_btn">
+                            <p class="btn_name">
+                                <a href="https://forms.gle/5SXrU9ujX7aE5kCE6" target="_blank">Register</a>
+                            </p>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="lower_part">
+                    <a href="" class="cta_link">
+                        <button class="sch_cta">Schedule Coming Soon<i class="fas fa-external-link-alt"></i></button>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing" target="_blank" class="cta_link">
+                        <button class="rule_cta">Rule Book<i class="fas fa-external-link-alt"></i></button>
+                    </a>
+                    <a href="https://drive.google.com/file/d/1bGLlHhm9Cxrhutxo_zMWE45PLAdPKZau/view?usp=sharing" target="_blank" class="cta_link">
+                        <button class="brch_cta">Brochure<i class="fas fa-external-link-alt"></i></button>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div class="section s4">
@@ -112,16 +182,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.js"></script>
-    <script>
-        new fullpage('#fullpage', {
-            autoScrolling: true,
-            navigation: true,
-            navigationPosition: 'right',
-            anchors: ['section1', 'section2', 'section3', 'section4'],
-            navigationTooltips: ['Home', 'About', 'Events', 'Contact'],
-            showActiveTooltip: false,
-        });
-    </script>
+
     <script src="./js/index.js"></script>
 </body>
 
