page 4 complete | desktop version complete

--- a/index.html
+++ b/index.html
@@ -97,8 +97,6 @@
                         them confidence whenever they go to an intercollege event. The series of
                         events are listed below.
                     </p>
-
-                    <div class="clip_background"></div>
                 </div>
             </div>
         </div>
@@ -166,10 +164,12 @@
                     <a href="" class="cta_link">
                         <button class="sch_cta">Schedule Coming Soon<i class="fas fa-external-link-alt"></i></button>
                     </a>
-                    <a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing" target="_blank" class="cta_link">
+                    <a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing"
+                        target="_blank" class="cta_link">
                         <button class="rule_cta">Rule Book<i class="fas fa-external-link-alt"></i></button>
                     </a>
-                    <a href="https://drive.google.com/file/d/1bGLlHhm9Cxrhutxo_zMWE45PLAdPKZau/view?usp=sharing" target="_blank" class="cta_link">
+                    <a href="https://drive.google.com/file/d/1bGLlHhm9Cxrhutxo_zMWE45PLAdPKZau/view?usp=sharing"
+                        target="_blank" class="cta_link">
                         <button class="brch_cta">Brochure<i class="fas fa-external-link-alt"></i></button>
                     </a>
                 </div>
@@ -177,7 +177,52 @@
         </div>
 
         <div class="section s4">
-            <h1>No wraps, no extra markup</h1>
+            <div class="container2">
+                <div class="contact_container">
+                    <p class="rkmvcc_text">for more details</p>
+                    <h1 class="about_heading">CONTACT US</h1>
+
+                    <p class="head_text"><i class="fas fa-users"></i>&nbsp;&nbsp;Organizing committee : </p>
+                    <ul class="committee_names">
+                        <li class="names">Anik Ghoshal</li>
+                        <li class="names">Soumya Dey</li>
+                        <li class="names">Purnendu Paul</li>
+                        <li class="names">Arkadip Maitra</li>
+                        <li class="names">Shree Mitra</li>
+                    </ul>
+
+                    <p class="head_text">
+                        <i class="fas fa-phone-alt"></i>&nbsp;&nbsp;You can call us at :
+                    </p>
+                    <ul class="committee_names">
+                        <li class="names">9874096881</li>
+                        <li class="names">8584028749</li>
+                        <li class="names">7477556110</li>
+                    </ul>
+
+                    <p class="head_text">
+                        <i class="far fa-envelope"></i>&nbsp;&nbsp;or mail us at :
+                    </p>
+                    <ul class="committee_names">
+                        <li class="names">greymatterrkmvcc@gmail.com</li>
+                    </ul>
+                </div>
+
+                <div class="quote_background">
+                    <div class="quote">
+                        <div class="bill_img"></div>
+                        <p class="quote_name">Bill Gates</p>
+                        <p class="bill_des">Co-founder of Microsoft Corporation</p>
+                        <p class="quote_text">
+                            "Until we're educating every kid in a fantastic way, 
+                            until every inner city is cleaned up, there is no shortage of things to do."
+                        </p>
+                    </div>
+
+                    <a href="#section1"><div class="arrow_up"><i class="fas fa-angle-up"></i></div></a>
+                    <div class="rights">Soumya Dey &copy;2020 | All rights reserved.</div>
+                </div>
+            </div>
         </div>
     </div>
 
