modified events section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                         </button>
                     </div>
 
+                    <div class="event_heading">
+                        <p>register now</p>
+                        <h1>EVENTS</h1>
+                    </div>
+
                     <div class="event_card card4">
                         <p class="event_name">CodeAffair</p>
                         <p class="event_subheading">Coding & Debugging</p>
