optimized for phone

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                         curated in such a way that every individual of this college, irrespective
                         of his department, can participate in the fest. The fest will really
                         help students to identify their talents, strong spots and will provide
-                        them confidence whenever they go to an intercollege event. The series of
-                        events are listed below.
+                        them confidence whenever they go to an intercollege event.
                     </p>
                 </div>
             </div>
@@ -105,8 +104,10 @@
             <div class="event_container">
                 <div class="event_cards">
                     <div class="event_card card1">
-                        <p class="event_name">Brain-O-Pedia</p>
-                        <p class="event_subheading">Quiz</p>
+                        <div>
+                            <p class="event_name">Brain-O-Pedia</p>
+                            <p class="event_subheading">Quiz</p>
+                        </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
@@ -116,8 +117,10 @@
                     </div>
 
                     <div class="event_card card2">
-                        <p class="event_name">Tug of Words</p>
-                        <p class="event_subheading">Debate</p>
+                        <div>
+                            <p class="event_name">Tug of Words</p>
+                            <p class="event_subheading">Debate</p>
+                        </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
@@ -127,8 +130,10 @@
                     </div>
 
                     <div class="event_card card3">
-                        <p class="event_name">Encrypto</p>
-                        <p class="event_subheading">Reasoning & Riddles</p>
+                        <div>
+                            <p class="event_name">Encrypto</p>
+                            <p class="event_subheading">Reasoning & Riddles</p>
+                        </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
@@ -143,8 +148,10 @@
                     </div>
 
                     <div class="event_card card4">
-                        <p class="event_name">CodeAffair</p>
-                        <p class="event_subheading">Coding & Debugging</p>
+                        <div>
+                            <p class="event_name">CodeAffair</p>
+                            <p class="event_subheading">Coding & Debugging</p>
+                        </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
@@ -154,8 +161,10 @@
                     </div>
 
                     <div class="event_card card5">
-                        <p class="event_name">UpFront</p>
-                        <p class="event_subheading">App UI Design</p>
+                        <div>
+                            <p class="event_name">UpFront</p>
+                            <p class="event_subheading">App UI Design</p>
+                        </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
@@ -167,7 +176,7 @@
 
                 <div class="lower_part">
                     <a href="" class="cta_link">
-                        <button class="sch_cta">Schedule Coming Soon<i class="fas fa-external-link-alt"></i></button>
+                        <button class="sch_cta">Schedule<i class="fas fa-external-link-alt"></i></button>
                     </a>
                     <a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing"
                         target="_blank" class="cta_link">
@@ -219,13 +228,15 @@
                         <p class="quote_name">Bill Gates</p>
                         <p class="bill_des">Co-founder of Microsoft Corporation</p>
                         <p class="quote_text">
-                            "Until we're educating every kid in a fantastic way, 
+                            "Until we're educating every kid in a fantastic way,
                             until every inner city is cleaned up, there is no shortage of things to do."
                         </p>
                     </div>
 
-                    <a href="#section1"><div class="arrow_up"><i class="fas fa-angle-up"></i></div></a>
-                    <div class="rights">Soumya Dey &copy;2020 | All rights reserved.</div>
+                    <a href="#section1">
+                        <div class="arrow_up"><i class="fas fa-angle-up"></i></div>
+                    </a>
+                    <div class="rights">&copy;Soumya Dey | All rights reserved.</div>
                 </div>
             </div>
         </div>
