furthur optimization for mobile

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                     <div class="arrow"><i class="fas fa-caret-right"></i></div>
                 </button>
 
+                <button type="submit" class="events_btn events_btn_alt">
+                    <p class="btn_name2"><a href="#section3">Schedule<i class="fas fa-external-link-alt"></i></a></p>
+                </button>
+
+                <button type="submit" class="events_btn events_btn_alt">
+                    <p class="btn_name2"><a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing"
+                        target="_blank">Rule Book<i class="fas fa-external-link-alt"></i></a></p>
+                </button>
+
                 <div class="scroll_down">
                     <i class="fas fa-angle-down"></i>
                 </div>
@@ -226,7 +235,7 @@
                     <div class="quote">
                         <div class="bill_img"></div>
                         <p class="quote_name">Bill Gates</p>
-                        <p class="bill_des">Co-founder of Microsoft Corporation</p>
+                        <p class="bill_des">Co-founder of Microsoft<br>Corporation</p>
                         <p class="quote_text">
                             "Until we're educating every kid in a fantastic way,
                             until every inner city is cleaned up, there is no shortage of things to do."
