further optimization for mobile

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 </button>
 
                 <button type="submit" class="events_btn events_btn_alt">
-                    <p class="btn_name2"><a href="#section3">Schedule<i class="fas fa-external-link-alt"></i></a></p>
+                    <p class="btn_name2"><a href="#section3">Schedule</a></p>
                 </button>
 
                 <button type="submit" class="events_btn events_btn_alt">
                     <p class="btn_name2"><a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing"
-                        target="_blank">Rule Book<i class="fas fa-external-link-alt"></i></a></p>
+                        target="_blank">Rule Book</a></p>
                 </button>
 
                 <div class="scroll_down">
