optimized images | changed layout of events page in mobile | all basic functionalities complete

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="event_card card3">
                         <div>
                             <p class="event_name">Encrypto</p>
-                            <p class="event_subheading">Reasoning & Riddles</p>
+                            <p class="event_subheading">Reasoning &<br>Riddles</p>
                         </div>
 
                         <button type="submit" class="registor_now_btn">
@@ -159,7 +159,7 @@
                     <div class="event_card card4">
                         <div>
                             <p class="event_name">CodeAffair</p>
-                            <p class="event_subheading">Coding & Debugging</p>
+                            <p class="event_subheading">Coding &<br>Debugging</p>
                         </div>
 
                         <button type="submit" class="registor_now_btn">
@@ -172,7 +172,7 @@
                     <div class="event_card card5">
                         <div>
                             <p class="event_name">UpFront</p>
-                            <p class="event_subheading">App UI Design</p>
+                            <p class="event_subheading">App UI<br>Design</p>
                         </div>
 
                         <button type="submit" class="registor_now_btn">
@@ -245,7 +245,7 @@
                     <a href="#section1">
                         <div class="arrow_up"><i class="fas fa-angle-up"></i></div>
                     </a>
-                    <div class="rights">&copy;Soumya Dey | All rights reserved.</div>
+                    <div class="rights">&copy;&nbsp;<a href="https://github.com/Soumya-Dey" target="_blank">Soumya Dey</a> | All rights reserved.</div>
                 </div>
             </div>
         </div>
