fixed some links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </button>
 
                 <button type="submit" class="events_btn events_btn_alt">
-                    <p class="btn_name2"><a href="#section3">Schedule</a></p>
+                    <p class="btn_name2"><a href="#">Schedule</a></p>
                 </button>
 
                 <button type="submit" class="events_btn events_btn_alt">
@@ -191,7 +191,7 @@
                         target="_blank" class="cta_link">
                         <button class="rule_cta">Rule Book<i class="fas fa-external-link-alt"></i></button>
                     </a>
-                    <a href="https://drive.google.com/file/d/1bGLlHhm9Cxrhutxo_zMWE45PLAdPKZau/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1NTYTQUvJzQ7I-i5B0LcbIXSn6120MMKc/view?usp=sharing"
                         target="_blank" class="cta_link">
                         <button class="brch_cta">Brochure<i class="fas fa-external-link-alt"></i></button>
                     </a>
