--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                 <div class="lower_part">
                     <a href="" class="cta_link">
-                        <button class="sch_cta">Schedule<i class="fas fa-external-link-alt"></i></button>
+                        <button class="sch_cta">Schedule Coming Soon<i class="fas fa-external-link-alt"></i></button>
                     </a>
                     <a href="https://drive.google.com/file/d/1Uzk9DBe719ffRurayUzHNuseYk82BJX3/view?usp=sharing"
                         target="_blank" class="cta_link">
