--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
                 </div>
             </div>
 
+            <!-- temporary content -->
+            <div class="postpone_container">
+                <div class="actual_content">
+                    <h1 class="postpone_text">The event date is postponed due to<br>COVID-19 situation untill 31st March,
+                        2020.</h1>
+                    <p class="inform_text">All participants will be informed once the new date is finalised.</p>
+                    <p class="note_text">NOTE : ALL EVENTS ARE STILL OPEN FOR REGISTRATION.</p>
+
+                    <button type="submit" class="btn_temp">
+                        <p class="btn_name2">I understand</p>
+                    </button>
+                </div>
+            </div>
+            <!-- temporary content -->
+
             <div class="hero">
                 <div class="navbar">
                     <div class="logo"></div>
@@ -49,9 +64,10 @@
 
                 <h1 class="heading">Event where everyone<br>can participate</h1>
                 <div class="seconadary">
-                    <p class="ad">Register today</p>
-                    <div class="divider_small"></div>
-                    <p class="time">Friday, March 20th, 2020</p>
+                    <!-- <p class="ad">Register today</p>
+                        <div class="divider_small"></div>
+                        <p class="time">Friday, March 20th, 2020</p> -->
+                    <p class="time">EVENT DATE POSTPONED TILL 31ST MARCH, 2020</p>
                 </div>
 
                 <button type="submit" class="events_btn">
@@ -64,8 +80,9 @@
                 </button>
 
                 <button type="submit" class="events_btn events_btn_alt">
-                    <p class="btn_name2"><a href="https://drive.google.com/file/d/1HqIb_KZVrpSB6KLYTA83JIMdOvhisGcv/view?usp=sharing"
-                        target="_blank">Rule Book</a></p>
+                    <p class="btn_name2"><a
+                            href="https://drive.google.com/file/d/1HqIb_KZVrpSB6KLYTA83JIMdOvhisGcv/view?usp=sharing"
+                            target="_blank">Rule Book</a></p>
                 </button>
 
                 <div class="scroll_down">
@@ -245,7 +262,8 @@
                     <a href="#section1">
                         <div class="arrow_up"><i class="fas fa-angle-up"></i></div>
                     </a>
-                    <div class="rights">&copy;&nbsp;<a href="https://github.com/Soumya-Dey" target="_blank">Soumya Dey</a> | All rights reserved.</div>
+                    <div class="rights">&copy;&nbsp;<a href="https://github.com/Soumya-Dey" target="_blank">Soumya
+                            Dey</a> | All rights reserved.</div>
                 </div>
             </div>
         </div>
