added temp content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- temporary content -->
             <div class="postpone_container">
                 <div class="actual_content">
-                    <h1 class="postpone_text">The event date is postponed due to<br>COVID-19 situation untill 31st March,
+                    <h1 class="postpone_text">The event date is postponed due to<br>COVID-19 situation untill 15th April,
                         2020.</h1>
                     <p class="inform_text">All participants will be informed once the new date is finalised.</p>
                     <p class="note_text">NOTE : ALL EVENTS ARE STILL OPEN FOR REGISTRATION.</p>
@@ -67,7 +67,7 @@
                     <!-- <p class="ad">Register today</p>
                         <div class="divider_small"></div>
                         <p class="time">Friday, March 20th, 2020</p> -->
-                    <p class="time">EVENT DATE POSTPONED TILL 31ST MARCH, 2020</p>
+                    <p class="time">DATE POSTPONED UNTILL 15TH APRIL, 2020</p>
                 </div>
 
                 <button type="submit" class="events_btn">
