--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- temporary content -->
             <div class="postpone_container">
                 <div class="actual_content">
-                    <h1 class="postpone_text">The event date is postponed untill further<br>notice due to COVID-19 situation.</h1>
+                    <h1 class="postpone_text">The event date is postponed until further<br>notice due to COVID-19 situation.</h1>
                     <p class="inform_text">All participants will be informed once the new date is finalised.</p>
                     <p class="note_text">NOTE : ALL EVENTS ARE STILL OPEN FOR REGISTRATION.</p>
 
