Add cancelled events

--- a/index.html
+++ b/index.html
@@ -130,39 +130,42 @@
                 <div class="event_cards">
                     <div class="event_card card1">
                         <div>
-                            <p class="event_name">Brain-O-Pedia</p>
-                            <p class="event_subheading">Quiz</p>
+                            <p class="event_name">CodeAffair</p>
+                            <p class="event_subheading">Coding &<br>Debugging</p>
                         </div>
 
                         <button type="submit" class="registor_now_btn">
                             <p class="btn_name">
-                                <a href="https://forms.gle/DrZFShZ3uxNZbY518" target="_blank">Register</a>
+                                <a href="https://forms.gle/k3b7eqVMdavsKP7v7" target="_blank">Register</a>
                             </p>
                         </button>
+                        
                     </div>
 
                     <div class="event_card card2">
+                        <div class="overlay_card"><p>Cancelled</p></div>
                         <div>
                             <p class="event_name">Tug of Words</p>
                             <p class="event_subheading">Debate</p>
                         </div>
 
-                        <button type="submit" class="registor_now_btn">
+                        <button type="submit" class="registor_now_btn" disabled>
                             <p class="btn_name">
-                                <a href="https://forms.gle/2AnKmVioTw6w2C6V6" target="_blank">Register</a>
+                                <a>Register</a>
                             </p>
                         </button>
                     </div>
 
                     <div class="event_card card3">
+                        <div class="overlay_card"><p>Cancelled</p></div>
                         <div>
                             <p class="event_name">Encrypto</p>
                             <p class="event_subheading">Reasoning &<br>Riddles</p>
                         </div>
 
-                        <button type="submit" class="registor_now_btn">
+                        <button type="submit" class="registor_now_btn" disabled>
                             <p class="btn_name">
-                                <a href="https://forms.gle/xC6NxQBj8QihAgLd8" target="_blank">Register</a>
+                                <a>Register</a>
                             </p>
                         </button>
                     </div>
@@ -173,27 +176,29 @@
                     </div>
 
                     <div class="event_card card4">
+                        <div class="overlay_card"><p>Cancelled</p></div>
                         <div>
-                            <p class="event_name">CodeAffair</p>
-                            <p class="event_subheading">Coding &<br>Debugging</p>
+                            <p class="event_name">Brain-O-Pedia</p>
+                            <p class="event_subheading">Quiz</p>
                         </div>
 
-                        <button type="submit" class="registor_now_btn">
+                        <button type="submit" class="registor_now_btn" disabled>
                             <p class="btn_name">
-                                <a href="https://forms.gle/k3b7eqVMdavsKP7v7" target="_blank">Register</a>
+                                <a>Register</a>
                             </p>
                         </button>
                     </div>
 
                     <div class="event_card card5">
+                        <div class="overlay_card"><p>Cancelled</p></div>
                         <div>
                             <p class="event_name">UpFront</p>
                             <p class="event_subheading">App UI<br>Design</p>
                         </div>
 
-                        <button type="submit" class="registor_now_btn">
+                        <button type="submit" class="registor_now_btn" disabled>
                             <p class="btn_name">
-                                <a href="https://forms.gle/5SXrU9ujX7aE5kCE6" target="_blank">Register</a>
+                                <a>Register</a>
                             </p>
                         </button>
                     </div>
@@ -226,8 +231,7 @@
                         <li class="names">Anik Ghoshal</li>
                         <li class="names">Soumya Dey</li>
                         <li class="names">Purnendu Paul</li>
-                        <li class="names">Arkadip Maitra</li>
-                        <li class="names">Shree Mitra</li>
+                        <li class="names">Rejoy Chakroborty</li>
                     </ul>
 
                     <p class="head_text">
